--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,29 @@
 {
+  "cmake.configureSettings": {
+    "CMAKE_CXX_COMPILER_LAUNCHER": "ccache",
+    "ENABLE_UNITY_BUILD": true
+  },
+  "cmake.buildDirectory": "${workspaceFolder}/build",
+  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
   "workbench.colorCustomizations": {
     "editorCursor.foreground": "#e9dbb7",
     "activityBarBadge.background": "#e9dbb7",
     "activityBarBadge.foreground": "#262626",
     "statusBar.background": "#262626",
     "statusBar.foreground": "#e9dbb7"
-  }
+  },
+
+  "code-runner.executorMap": {
+    "cpp": "cd $workspaceRoot ; if(!(Test-Path build)) { mkdir build } ; cd build ; cmake .. ; cmake --build . --target $fileNameWithoutExt ; ./$fileNameWithoutExt"
+  },
+  "code-runner.runInTerminal": true,
+  "code-runner.clearPreviousOutput": true,
+  "code-runner.saveAllFilesBeforeRun": true,
+
+  "cph.useCustomCompilerCommand": true,
+  "cph.useDefaultCompilerCommand": false,
+  "cph.customCompilerCommand": {
+    "cpp": "cd $workspaceRoot ; if(!(Test-Path build)) { mkdir build } ; cd build ; cmake .. ; cmake --build . --target $fileNameWithoutExt ; ./$fileNameWithoutExt"
+  },
+  "cph.runInTerminal": true
 }
