--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,10 @@
   "cmake.buildDirectory": "${workspaceFolder}/build",
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
   "workbench.colorCustomizations": {
-    "editorCursor.foreground": "#e9dbb7",
+    "editorCursor.foreground": "#ef857d",
     "activityBarBadge.background": "#e9dbb7",
     "activityBarBadge.foreground": "#262626",
-    "statusBar.background": "#262626",
+    "statusBar.background": "#9f5a51",
     "statusBar.foreground": "#e9dbb7"
   },
 
